--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "axios": "^0.21.1",
+    "busboy": "^0.3.1",
+    "express": "^4.17.1",
     "firebase": "^8.2.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
